# http-server

./: .gitignore  .gitmodules  README.md
doc/: FeatureFlags.md  REFERENCES.md
examples/: README.md
examples/esp-idf/test/main/: CMakeLists.txt  Kconfig.projbuild  test.c  wifi.c
examples/fileserver/: CMakeLists.txt  http.c  http.h  main.c
ext/: CMakeLists.txt  README.md
src/: .gitignore  CMakeLists.txt  README.md  http.h  main.c  utils.cmake
src/audit/: CMakeLists.txt  audit.c  pipeline.c
src/audit/http/: audit.h
src/containers/: CMakeLists.txt  array.c  array.h  bind.c  bind.h  bool.h  fwd.h  queue.c  queue.h  span.h  string.c  string.h  threadpool.c  threadpool.h  util.h
src/containers/esp-idf/: err.h  logger.h
src/containers/obsolete/: dispatcher.h  http_dispatcher.c  http_server.c
src/containers/obsolete/http/: dispatcher.h  fileserver.h  fwd.h  server.h
src/containers/obsolete/http/internal/: server.h
src/fileserver/: CMakeLists.txt  fileserver-socket.c  fileserver-stream.c  fileserver.c
src/fileserver/http/pipeline/: audit.h  fileserver.h
src/fileserver/http/pipeline/internal/: fileserver.h
src/http/: CMakeLists.txt  debug.c  http_context.c  http_header.c  http_pipeline.c  http_request.c  http_request_decoder.c  http_request_lwip.c  http_request_posix.c  http_request_statemachine.c  http_response.c  http_threadpool.c
src/http/http/: context.h  debug.h  enum.h  fwd.h  handler.h  header-constants.h  header.h  headers.h  pipeline.h  request.h  response.h  threadpool.h  transport.h
src/http/http/internal/: header.h  pipeline.h  request.h  response.h
src/http/http/pipeline/: message.h
src/http/http/statemachine/: enum.h  request.h
src/pglx-8/: CMakeLists.txt  README.md  queue.h
src/pglx-8/test_files/: CMakeLists.txt  main.c  thread-tests.c  thread-tests.h
src/tokenizer/: CMakeLists.txt  tokenizer.c
src/tokenizer/statemachine/: enum.h  fwd.h  out.h  tokenizer.h
src/tokenizer/statemachine/internal/: tokenizer.h
test/unity/: CMakeLists.txt  array_test.c  audit_tests.c  domain-socket.c  domain-socket.h  experimental_test.c  http_fileserver_tests.c  http_header_test.c  http_pipeline_tests.c  http_request_test.c  http_response_tests.c  main.c  queue-tests.c  test-data.h  thread-tests.c  tokenizer_tests.c  unit-tests.h
